<resources>
    <string name="app_name">Sinabro</string>

    <!-- 교과서 선택 -->
    <string name="subject_select_title">교과서 선택</string>
    <string name="subject">교과서</string>
    <string name="unit">단원</string>
    <string name="ok">확인</string>
    <string name="publisher">출판사</string>

    <!-- 메인 -->
    <string name="main_title">시나브로</string>
    <string name="voca_search">단어 검색</string>
    <string name="voca_learning">어휘 학습</string>
    <string name="pronounce_learning">발음 학습</string>
    <string name="listen_learning">듣기 학습</string>
    <string name="write_learning">쓰기 학습</string>

    <!--단어검색-->
    <string name="search">검색</string>
    <string name="main">메인</string>
    <string name="voca_definition_synonym">단어 정의 및 유의어 반의어</string>
    <string name="voca_sentence">교과서 문장 예시 및 단원 페이지 정보</string>
    <string name="example_sentence">예시 문장</string>
    <string name="voca_definition">단어 정의</string>
    <string name="answer_ok">정답 확인</string>
    <string name="listen">듣기</string>
    <string name="next_problem">다음 문제</string>
    <string name="rec">녹음</string>
    <string name="user_score">사용자 점수</string>
    <string name="stop">중지</string>
    <string name="save">저장 및 점수확인</string>
    <string name="file_upload">파일 업로드 및 점수 확인</string>

    <!-- 어휘학습-->
    <string name="right">정답입니다!</string>
    <string name="fail">틀렸습니다!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="voca_learning_hint">단어 정의 힌트 보기</string>

    <!-- 온보딩 -->
    <string name="first_onboarding">원하는 출판사와 교과서 및 단원을 선택할 수 있어요</string>
    <string name="second_onboarding">원하는 단어를 검색하고 정의와 해당 단어가 나오는 문장을 확인할 수 있어요</string>
    <string name="three_onboarding">선택한 출판사와 교과서, 단원에 대한 어휘 문제를 풀 수 있어요</string>
    <string name="four_onboarding">선택한 출판사와 교과서, 단원에 대한 문장을 읽어보며 내 발음 점수를 측정할 수 있어요</string>
    <string name="start">시작하기</string>

    <!-- 듣기 학습 -->
    <string name="listen_sentence">문장 듣기</string>
    <string name="listen_answer_hint">문장 듣기 버튼을 눌러 문장을 듣고 여길 클릭해 문장을 그대로 입력하세요</string>
    <string name="kakao_app_key">b65d5db54c8aa87db15c9d08bf9880b3</string>
    <string name="listen_answer_score">&lt; 틀린 모음, 자음, 띄어쓰기 개수 &gt;</string>

    <!-- QA 학습 -->
    <string name="qa_hint">질문하고 싶은 내용을 여기에 입력한뒤 검색하기 버튼을 눌러주세요</string>
    <string name="qa_search">검색하기</string>
    <string name="qa_learning">QA학습</string>
</resources>