<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.main.MainActivity">

        <ImageView
            android:id="@+id/img_setting"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_setting"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="6dp"/>

        <TextView
            android:id="@+id/text_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:fontFamily="@font/notosanskr_bold"
            android:textSize="36sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"/>


        <TextView
            android:id="@+id/text_voca_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voca_search"
            android:fontFamily="@font/notosanskr_bold"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_main_title"
            android:layout_marginTop="100dp"
            android:background="@drawable/rectangle_fill_pink_140_50_radius_10"/>


        <TextView
            android:id="@+id/text_voca_learning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voca_learning"
            android:fontFamily="@font/notosanskr_bold"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_voca_search"
            android:layout_marginTop="60dp"
            android:background="@drawable/rectangle_fill_pink_140_50_radius_10"/>

        <TextView
            android:id="@+id/text_pronounce_learning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pronounce_learning"
            android:fontFamily="@font/notosanskr_bold"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_voca_learning"
            android:layout_marginTop="60dp"
            android:background="@drawable/rectangle_fill_pink_140_50_radius_10"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>