<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.pronouncelearning.PronounceLearningAnswerActivity">

        <TextView
            android:id="@+id/text_pronounce_learning_score"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:text="@string/user_score"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/notosanskr_bold"
            android:layout_marginTop="40dp"
            android:layout_marginStart="43dp"
            android:layout_marginEnd="43dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rectangle_fill_sinabro_gray_radius_5"/>

        <TextView
            android:id="@+id/text_pronounce_learning_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/main"
            android:paddingHorizontal="35dp"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/notosanskr_bold"
            android:background="@drawable/rectangle_fill_dark_pink_radius_10"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_pronounce_learning_next"
            app:layout_constraintStart_toStartOf="@+id/text_pronounce_learning_score"
            />

        <TextView
            android:id="@+id/text_pronounce_learning_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_problem"
            android:paddingHorizontal="28dp"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/notosanskr_bold"
            android:background="@drawable/rectangle_fill_dark_pink_radius_10"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/text_pronounce_learning_score"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>