<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.listenlearning.ListenLearningActivity">

        <TextView
            android:id="@+id/text_listen_sentence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/listen_sentence"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/notosanskr_bold"
            android:layout_marginTop="40dp"
            android:layout_marginStart="43dp"
            android:layout_marginEnd="43dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rectangle_fill_sinabro_gray_radius_5" />

        <EditText
            android:id="@+id/et_listen_sentence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_fill_sinabro_gray_radius_5"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/notosanskr_bold"
            android:hint="@string/listen_answer_hint"
            android:padding="30dp"
            android:textCursorDrawable="@drawable/edittext_cursor"
            app:layout_constraintStart_toStartOf="@+id/text_listen_sentence"
            app:layout_constraintEnd_toEndOf="@+id/text_listen_sentence"
            app:layout_constraintTop_toBottomOf="@+id/text_listen_sentence"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="70dp"
            />



        <TextView
            android:id="@+id/text_listen_learning_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/answer_ok"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/notosanskr_bold"
            android:background="@drawable/rectangle_fill_dark_pink_radius_10"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>