<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.subjectselect.SubjectSelectActivity">


        <TextView
            android:id="@+id/text_subject_select_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject_select_title"
            android:textSize="36sp"
            android:fontFamily="@font/notosanskr_bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="56dp"/>

        <Spinner
            android:id="@+id/spinner_publisher_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:prompt="@string/publisher"
            android:gravity="center"
            android:textSize="14sp"
            android:spinnerMode="dropdown"
            android:background="@drawable/rectangle_fill_pink_140_50_radius_10"
            app:layout_constraintTop_toBottomOf="@+id/text_subject_select_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/img_spinner_publisher_select_unit_arrow"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@drawable/ic_arrow_black"
            android:clickable="false"
            android:focusable="false"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="@+id/spinner_publisher_select"
            app:layout_constraintTop_toTopOf="@+id/spinner_publisher_select"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_publisher_select"
            />
        <ImageView
            android:id="@+id/img_spinner_subject_select_arrow"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@drawable/ic_arrow_black"
            android:clickable="false"
            android:focusable="false"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="@+id/spinner_subject_select"
            app:layout_constraintTop_toTopOf="@+id/spinner_subject_select"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_subject_select"
            />

        <Spinner
            android:id="@+id/spinner_subject_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:prompt="@string/subject"
            android:gravity="center"
            android:textSize="14sp"
            android:spinnerMode="dropdown"
            android:background="@drawable/rectangle_fill_pink_140_50_radius_10"
            app:layout_constraintTop_toBottomOf="@+id/spinner_publisher_select"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/img_spinner_subject_select_unit_arrow"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@drawable/ic_arrow_black"
            android:clickable="false"
            android:focusable="false"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="@+id/spinner_subject_select_unit"
            app:layout_constraintTop_toTopOf="@+id/spinner_subject_select_unit"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_subject_select_unit"
            />

        <Spinner
            android:id="@+id/spinner_subject_select_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:prompt="@string/unit"
            android:textSize="14sp"
            android:spinnerMode="dropdown"
            android:background="@drawable/rectangle_fill_pink_140_50_radius_10"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_subject_select"
            app:layout_constraintStart_toStartOf="@+id/spinner_subject_select"/>

        <TextView
            android:id="@+id/text_subject_select_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/notosanskr_bold"
            android:background="@drawable/rectangle_fill_dark_pink_radius_10"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>