<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.qalearning.QALearningActivity">

        <EditText
            android:id="@+id/et_qa_sentence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_fill_sinabro_gray_radius_5"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/notosanskr_bold"
            android:hint="@string/qa_hint"
            android:padding="30dp"
            android:textCursorDrawable="@drawable/edittext_cursor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />


        <TextView
            android:id="@+id/text_qa_sentence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/notosanskr_bold"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/et_qa_sentence"
            app:layout_constraintStart_toStartOf="@+id/et_qa_sentence"
            app:layout_constraintEnd_toEndOf="@+id/et_qa_sentence"
            android:background="@drawable/rectangle_fill_sinabro_gray_radius_5" />

        <TextView
            android:id="@+id/text_qa_learning_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rectangle_fill_dark_pink_radius_10"
            android:fontFamily="@font/notosanskr_bold"
            android:gravity="center_horizontal"
            android:paddingHorizontal="35dp"
            android:text="@string/main"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_qa_learning_search"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_qa_learning_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/rectangle_fill_dark_pink_radius_10"
            android:fontFamily="@font/notosanskr_bold"
            android:gravity="center_horizontal"
            android:paddingHorizontal="28dp"
            android:text="@string/qa_search"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_qa_learning_main"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>